dynamicConfigIp/config/samples/nginx-helm/nginx-chart/networkpolicy/simplyNetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: test-network-policy
    namespace: default
spec:
     podSelector:
       matchLabels:
         role: db
     policyTypes:
     - Ingress
     - Egress
     ingress:
      - from:
        - namespaceSelector:
            matchLabels:
              project: mynginx
        ports:
          - protocol: TCP
            port: 456
     egress: []
